Fixes for alignment

--- a/src/frontend/web_application/src/scenes/ContactBook/components/ContactFilters/style.scss
+++ b/src/frontend/web_application/src/scenes/ContactBook/components/ContactFilters/style.scss
@@ -2,17 +2,14 @@
 @import '../../../../styles/vendor/bootstrap_foundation-sites';
 
 .m-contact-filters {
-  padding-top: map-get($co-form__spacing, 'medium');
-  background-color: $co-color__fg__back;
 
-  &__col {
+  &__select {
     @include flex-grid-row;
 
     label {
       @include flex-grid-column(shrink);
       height: $co-component__height;
       line-height: $co-component__height;
-
     }
 
     select {
