--- a/src/frontend/web_application/src/scenes/ContactBook/style.scss
+++ b/src/frontend/web_application/src/scenes/ContactBook/style.scss
@@ -2,12 +2,17 @@
 @import '../../styles/vendor/bootstrap_foundation-sites';
 
 .l-contact-book {
-  @include flex-grid-row($size: expanded);
   background: $co-color__bg__back;
 
 
   &__filters {
-    @include flex-grid-size(12);
+    @include flex-grid-row($size: expanded);
+    background-color: $co-color__fg__back;
+  }
+
+  &__contacts {
+    @include flex-grid-row($size: expanded);
+
   }
 
   &__tags {
@@ -15,7 +20,7 @@
     padding: map_get($co-form__spacing, 'large');
   }
 
-  &__contacts {
+  &__contact-list {
     @include flex-grid-size;
   }
 }
